# jax-status

./: .gitignore  README.md  conversation.md  cost.md  flake.nix  jax-cuda12-pjrt.nix  jax-cuda12-plugin.nix  jax-status.nix  jax.nix  jaxlib.nix  ml-dtypes.nix  nvidia-cudnn-cu12.nix  opt-einsum.nix  pyproject.toml  result  scipy.nix  sitecustomize.py
allin1/: flake.nix  jax-status-allin1.nix
jax_status/: __init__.py  cli.py  main.py
